--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
               <input id="qInput" type="text" autocomplete="off" placeholder="sujet verbe" />
               <button id="qSubmit" class="btn primary">Valider</button>
               <button id="qNext" class="btn" style="display: none">J’ai compris / Suivant</button>
-              <div id="qFeedback" class="feedback"></div>
+              <div id="qFeedback" class="feedback" role="status" aria-live="polite"></div>
             </div>
           </div>
         </div>
@@ -104,7 +104,7 @@
                 <div class="row"><span>ils/elles</span><input data-p="3p" /></div>
               </div>
               <button id="libreCheck" class="btn primary">Vérifier</button>
-              <div id="libreFeedback" class="feedback"></div>
+              <div id="libreFeedback" class="feedback" role="status" aria-live="polite"></div>
             </div>
             <div>
               <h3>Correction</h3>
