utilisation de json

--- a/index.html
+++ b/index.html
@@ -184,16 +184,16 @@
       <section id="reglages" class="tab-panel">
         <div class="panel">
           <h2>Réglages</h2>
-          <div class="row wrap gap">
-            <div>
+          <div class="col">
+            <div class="row wrap gap">
               <label>Verbes actifs</label>
               <div id="verbsChecks" class="checks"></div>
             </div>
-            <div>
+            <div class="row wrap gap">
               <label>Temps actifs</label>
               <div id="tensesChecks" class="checks"></div>
             </div>
-            <div>
+            <div class="row wrap gap">
               <label>Questions par session</label>
               <input id="qCount" type="number" min="5" max="20" value="10" />
             </div>
