--- a/index.html
+++ b/index.html
@@ -185,6 +185,16 @@
       <section id="reglages" class="tab-panel">
         <div class="panel">
           <h2>Réglages</h2>
+          <div class="row gap" style="align-items: center; margin-bottom: 8px">
+            <label for="presetSelect" style="min-width: 140px">Préconfiguration :</label>
+            <select id="presetSelect">
+              <!-- options injectées par app.js -->
+            </select>
+            <span style="font-size: 12px; color: var(--muted)">
+              (Aperçu uniquement — cliquer <b>Enregistrer</b> pour appliquer)
+            </span>
+          </div>
+
           <div class="col">
             <div class="row wrap gap">
               <label>Verbes actifs</label>
